--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
+    "dnd-core": "^16.0.1",
+    "immutability-helper": "^3.1.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
